implement usecase of fetching invoice list
